# shinatama

./: .gitignore  Cargo.toml  LICENSE.md  README.md  REFLECTIONS.md  build.rs
assets/: shina.toml
scripts/: build.bat  debug.bat  release.bat  run.bat
src/: config.rs  debug.rs  index.rs  lib.rs  oni.rs  patch.rs  patcher.rs
