[package]
name = "shinatama"
version = "0.1.2"
edition = "2021"

description = "Miscellaneous engine patches for Oni (2001)"
repository = "https://github.com/lewdum/shinatama/"
license = "MIT"

[lib]
name = "dinput"
crate-type = ["cdylib"]

[dependencies]
toml = "0.5.9"
serde = "1.0.145"
serde_derive = "1.0.145"

[dependencies.windows]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1.12"
